refactor: Refactored navigation, cleaned up css and finalized responsive design accross small, medium and large viewports

--- a/blog.html
+++ b/blog.html
@@ -15,34 +15,41 @@
         <h2 class="sub-title">Full Stack Web Developer</h2>
       </section>
 
-      <a href="./blog.html">
-        <button class="mobile-nav-button">&#43</button>
-      </a>
-
       <nav class="main-nav">
-        <a href="./home.html">Home</a>
-        <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
+        <a href="./projects.html">Projects</a>
         <a href="./blog.html">Blog</a>
       </nav>
     </header>
 
     <main class="blog">
       <article class="blog-post">
-        <a class='blog-link' href="./article.html">
+        <a class="blog-link" href="./article.html">
           <time class="blog-date">Dec 13 2020</time>
 
           <header class="blog-header">
             <h2 class="blog-headline">Front End Development</h2>
-            <h3 class="blog-sub-headline">
-              A Medium For Communication
-            </h3>
+            <h3 class="blog-sub-headline">A Medium For Communication</h3>
           </header>
-
+          
           <p class="blog-content">
-            I've never really thought about front-end development as a medium of communication until I heard my intructor talk about it. It's totally elevated my appreciation for good UI and going forward I will do my best to code with this in mind.
+            I've never really thought about front-end development as a medium of
+            communication until I heard my intructor talk about it...
           </p>
-        </a>
+      </article>
+
+      <article class="blog-post">
+        <a class="blog-link" href="./article2.html">
+          <time class="blog-date">Dec 10 2020</time>
+
+          <header class="blog-header">
+            <h2 class="blog-headline">Hello World Again</h2>
+            <h3 class="blog-sub-headline">A Website Re-design</h3>
+          </header>
+          
+          <p class="blog-content">
+            It's that time of year again, I'm going to re-design my personal website...
+          </p>
       </article>
     </main>
 
