--- a/contact.html
+++ b/contact.html
@@ -15,24 +15,19 @@
         <h2 class="sub-title">Full Stack Web Developer</h2>
       </section>
 
-      <a href="./home.html">
-        <button class="mobile-nav-button">&#43</button>
-      </a>
-
       <nav class="main-nav">
-        <a href="./home.html">Home</a>
-        <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
+        <a href="./projects.html">Projects</a>
         <a href="./blog.html">Blog</a>
       </nav>
     </header>
 
     <main class="main">
       <h2>Say Hello</h2>
-      <p>I'll get back to you ASAP</p>
-      <form class='contact-form' action="#">
-        <input placeholder="Name"/>
-        <input placeholder="Email"/>
+      <p>I'll get back to you ASAP promise.</p>
+      <form class="contact-form" action="#">
+        <input placeholder="Name" />
+        <input placeholder="Email" />
         <textarea placeholder="What's on your mind?"></textarea>
       </form>
     </main>
