--- a/home.html
+++ b/home.html
@@ -15,23 +15,20 @@
         <h2 class="sub-title">Full Stack Web Developer</h2>
       </section>
 
-      <a href="./blog.html">
-        <button class="mobile-nav-button">&#43</button>
-      </a>
-
       <nav class="main-nav">
-        <a href="./home.html">Home</a>
-        <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
+        <a href="./projects.html">Projects</a>
         <a href="./blog.html">Blog</a>
       </nav>
     </header>
 
     <main class="main">
-      <h2>Web Design<br>& Development</h2>
+      <h2>Web Design<br />& Development</h2>
       <p>
-        Hey, Thanks for stopping bye! If
-        you would like to see some of my work you cand do that <a href="./projects.html">here</a>. And if you'd like to talk to chat you can do that <a href="./contact.html">here.</a>
+        If you would like talk about development work contact me
+        <a href="./contact.html">here</a>. Projects are
+        <a href="./projects.html">here</a> and if you would like to read some of
+        my thoughts on you can do that <a href="./blog.html">here.</a>
       </p>
     </main>
 
