refactor: Added strong, em, u, q, figcaption and button elements. Added image and buttons to blog homepage and author info to blog post.

--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,12 @@
 
     <main class="main">
       <h2>Say Hello</h2>
-      <p>I'll get back to you ASAP promise.</p>
+      <p>I'll get back to you ASAP <u>promise.</u></p>
+
       <form class="contact-form" action="#">
         <input placeholder="Name" />
         <input placeholder="Email" />
-        <textarea placeholder="What's on your mind?"></textarea>
+        <textarea placeholder="What's on your mind?" rows="5"></textarea>
       </form>
     </main>
 
