--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
       </section>
 
       <nav class="main-nav">
-        <a href="./contact.html">Contact</a>
-        <a href="./projects.html">Projects</a>
-        <a href="./blog.html">Blog</a>
+        <strong><a href="./contact.html">Contact</a></strong>
+        <strong><a href="./projects.html">Projects</a></strong>
+        <strong><a href="./blog.html">Blog</a></strong>
       </nav>
     </header>
 
@@ -26,9 +26,11 @@
       <h2>Web Design<br />& Development</h2>
       <p>
         If you would like talk about development work contact me
-        <a href="./contact.html">here</a>. Projects are
-        <a href="./projects.html">here</a> and if you would like to read some of
-        my thoughts on you can do that <a href="./blog.html">here.</a>
+        <strong><a href="./contact.html">here</a></strong
+        >. Projects are <strong><a href="./projects.html">here</a></strong> and
+        if you would like to read some of my thoughts on you can do that
+        <strong><a href="./blog.html">here</a></strong
+        >.
       </p>
     </main>
 
