--- a/projects.html
+++ b/projects.html
@@ -27,11 +27,13 @@
       <p>
         Try coming back another time. I hope to have it done soon, but you
         know... the
-        <a
-          href="https://www.psychologytoday.com/us/blog/credit-and-blame-work/200812/cobblers-children-syndrome-in-the-workplace"
-          target="blank"
-          >cobblers kid</a
-        >
+        <strong>
+          <a
+            href="https://www.psychologytoday.com/us/blog/credit-and-blame-work/200812/cobblers-children-syndrome-in-the-workplace"
+            target="blank"
+            >cobblers kid
+          </a>
+        </strong>
         amiright?
       </p>
     </main>
