--- a/blog.html
+++ b/blog.html
@@ -24,32 +24,81 @@
 
     <main class="blog">
       <article class="blog-post">
-        <a class="blog-link" href="./article.html">
-          <time class="blog-date">Dec 13 2020</time>
+        <header class="blog-header">
+          <section class="author-info">
+            <img
+              class="author-avatar"
+              src="https://avatars3.githubusercontent.com/u/43119764?s=60&v=4"
+              alt="Photo of Alfonso Ruiz"
+            />
 
-          <header class="blog-header">
+            <section class="author-details">
+              <h3 class="author-name">Alfonso Ruiz</h3>
+
+              <section class="social-links">
+                <button class="author-social-link">
+                  <a href="#">Twitter</a>
+                </button>
+                <button class="author-social-link">
+                  <a href="#">Facebook</a>
+                </button>
+                <button class="author-social-link">
+                  <a href="#">Linkedin</a>
+                </button>
+              </section>
+            </section>
+          </section>
+
+          <a class="blog-link" href="./article.html">
+            <time class="blog-date">Dec 13 2020</time>
             <h2 class="blog-headline">Front End Development</h2>
             <h3 class="blog-sub-headline">A Medium For Communication</h3>
-          </header>
-          
-          <p class="blog-content">
-            I've never really thought about front-end development as a medium of
-            communication until I heard my intructor talk about it...
-          </p>
+          </a>
+        </header>
+
+        <p class="blog-content">
+          I've never really thought about front-end development as a medium of
+          communication until I heard my intructor talk about it...
+        </p>
       </article>
 
       <article class="blog-post">
-        <a class="blog-link" href="./article2.html">
-          <time class="blog-date">Dec 10 2020</time>
+        <header class="blog-header">
+          <section class="author-info">
+            <img
+              class="author-avatar"
+              src="https://avatars3.githubusercontent.com/u/43119764?s=60&v=4"
+              alt="Photo of Alfonso Ruiz"
+            />
 
-          <header class="blog-header">
+            <section class="author-details">
+              <h3 class="author-name">Alfonso Ruiz</h3>
+
+              <section class="social-links">
+                <button class="author-social-link">
+                  <a href="#">Twitter</a>
+                </button>
+                <button class="author-social-link">
+                  <a href="#">Facebook</a>
+                </button>
+                <button class="author-social-link">
+                  <a href="#">Linkedin</a>
+                </button>
+              </section>
+            </section>
+          </section>
+
+          <a class="blog-link" href="./article2.html">
+            <time class="blog-date">Dec 10 2020</time>
             <h2 class="blog-headline">Hello World Again</h2>
             <h3 class="blog-sub-headline">A Website Re-design</h3>
-          </header>
-          
-          <p class="blog-content">
-            It's that time of year again, I'm going to re-design my personal website...
-          </p>
+          </a>
+        </header>
+
+        <p class="blog-content">
+          It's that time of year again, I'm going to re-design my personal
+          website...
+        </p>
       </article>
     </main>
 
